--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,26 @@
 <resources>
     <string name="app_name">Capstone</string>
+    <string name="background_content_desc">background</string>
+    <string name="image_poster_content_desc">image poster</string>
+    <string name="star_icon_content_desc">star icon</string>
+    <string name="synopsis_text">Synopsis</string>
+    <string name="info_text">Info</string>
+    <string name="characters_text">Characters</string>
+    <string name="reviews_text">Reviews</string>
+    <string name="my_anime_suggestions_text">My Anime Suggestions</string>
+    <string name="latest_updated_episode_text">Latest Updated Episode</string>
+    <string name="favorite_button_content_desc">favorite button</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="alternative_titles_text">Alternative Titles</string>
+    <string name="japanese_label_text">Japanese:</string>
+    <string name="information_text">Information</string>
+    <string name="type_label_text">Type:</string>
+    <string name="episodes_label_text">Episodes:</string>
+    <string name="status_label_text">Status:</string>
+    <string name="aired_label_text">Aired:</string>
+    <string name="duration_label_text">Duration:</string>
+    <string name="rating_label_text">Rating:</string>
+    <string name="character_image_content_desc">character image</string>
+    <string name="voice_actor_image_content_desc">voice actor image</string>
 </resources>
