Refactor & add Schedule + Top anime list on Home Fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="info_text">Info</string>
     <string name="characters_text">Characters</string>
     <string name="reviews_text">Reviews</string>
-    <string name="my_anime_suggestions_text">My Anime Suggestions</string>
+    <string name="my_anime_suggestions_text">Top Upcoming Anime</string>
     <string name="latest_updated_episode_text">Today New Episode</string>
     <string name="favorite_button_content_desc">favorite button</string>
 
