--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     <string name="rank_symbol">#</string>
     <string name="icon_content_desc">icon</string>
     <string name="resource_error_text">error when getting data</string>
+    <string name="loading_text">Loading...</string>
 </resources>
