--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="icon_content_desc">icon</string>
     <string name="resource_error_text">error when getting data</string>
     <string name="loading_text">Loading…</string>
+    <string name="error_search_text">Error while searching data,\n please try again or change your keyword</string>
 </resources>
